Assets/ECAScripts/Parser/ECARulesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ECARulesParser.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

namespace ECARules4All.RuleEngine
{


	[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
	[System.CLSCompliant(false)]
	public partial class ECARulesParser : Parser
	{
		protected static DFA[] decisionToDFA;
		protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
		public const int
			WHITESPACE = 1, WHEN = 2, THEN = 3, IF = 4, THE = 5, X = 6, Y = 7, Z = 8, AXIS = 9, DEFINE = 10,
			CONDITION = 11, HAS = 12, GT = 13, LT = 14, NOT = 15, EQUAL = 16, LE = 17, GE = 18, NOTEQUAL = 19,
			AND = 20, OR = 21, ADD = 22, SUB = 23, MUL = 24, DIV = 25, MOD = 26, IS = 27, LPAREN = 28,
			RPAREN = 29, LBRACE = 30, RBRACE = 31, LBRACK = 32, RBRACK = 33, SEMI = 34, COMMA = 35,
			DOT = 36, COLOR = 37, POSITION = 38, PATH = 39, A = 40, AS = 41, AT = 42, AROUND = 43,
			BY = 44, FOR = 45, FROM = 46, IN = 47, ON = 48, OF = 49, OFF = 50, TO = 51, WITH = 52, DEGREES = 53,
			POV_LITERAL = 54, BOOL_LITERAL = 55, BOOL_YES_NO = 56, COLOR_LITERAL = 57, DECIMAL_LITERAL = 58,
			IDENTIFIER = 59, STRING_LITERAL = 60, FLOAT_LITERAL = 61, TIME_LITERAL = 62, MEASURE_UNIT = 63;
		public const int
			RULE_program = 0, RULE_declaration = 1, RULE_objectDeclaration = 2, RULE_positionDeclaration = 3,
			RULE_positionLiteral = 4, RULE_pathDeclaration = 5, RULE_colorDeclaration = 6,
			RULE_floatLiteral = 7, RULE_type = 8, RULE_position = 9, RULE_path = 10,
			RULE_angle = 11, RULE_color = 12, RULE_behaviourDeclaration = 13, RULE_alias = 14,
			RULE_ecarule = 15, RULE_action = 16, RULE_subject = 17, RULE_verb = 18,
			RULE_object = 19, RULE_value = 20, RULE_modifier = 21, RULE_preposition = 22,
			RULE_property = 23, RULE_condition = 24, RULE_baseCondition = 25, RULE_operator = 26;
		public static readonly string[] ruleNames = {
		"program", "declaration", "objectDeclaration", "positionDeclaration",
		"positionLiteral", "pathDeclaration", "colorDeclaration", "floatLiteral",
		"type", "position", "path", "angle", "color", "behaviourDeclaration",
		"alias", "ecarule", "action", "subject", "verb", "object", "value", "modifier",
		"preposition", "property", "condition", "baseCondition", "operator"
	};

		private static readonly string[] _LiteralNames = {
		null, null, "'when'", "'then'", "'if'", "'the'", "'x'", "'y'", "'z'",
		"'axis'", "'define'", "'condition'", "'has'", "'>'", "'<'", "'not'", "'='",
		"'<='", "'>='", "'!='", "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", "'%'",
		"'is'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'",
		"'color'", "'position'", "'path'", "'a'", "'as'", "'at'", "'around'",
		"'by'", "'for'", "'from'", "'in'", "'on'", "'of'", "'off'", "'to'", "'with'",
		"'degrees'"
	};
		private static readonly string[] _SymbolicNames = {
		null, "WHITESPACE", "WHEN", "THEN", "IF", "THE", "X", "Y", "Z", "AXIS",
		"DEFINE", "CONDITION", "HAS", "GT", "LT", "NOT", "EQUAL", "LE", "GE",
		"NOTEQUAL", "AND", "OR", "ADD", "SUB", "MUL", "DIV", "MOD", "IS", "LPAREN",
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT",
		"COLOR", "POSITION", "PATH", "A", "AS", "AT", "AROUND", "BY", "FOR", "FROM",
		"IN", "ON", "OF", "OFF", "TO", "WITH", "DEGREES", "POV_LITERAL", "BOOL_LITERAL",
		"BOOL_YES_NO", "COLOR_LITERAL", "DECIMAL_LITERAL", "IDENTIFIER", "STRING_LITERAL",
		"FLOAT_LITERAL", "TIME_LITERAL", "MEASURE_UNIT"
	};
		public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

		[NotNull]
		public override IVocabulary Vocabulary
		{
			get
			{
				return DefaultVocabulary;
			}
		}

		public override string GrammarFileName { get { return "ECARulesParser.g4"; } }

		public override string[] RuleNames { get { return ruleNames; } }

		public override string SerializedAtn { get { return new string(_serializedATN); } }

		static ECARulesParser()
		{
			decisionToDFA = new DFA[_ATN.NumberOfDecisions];
			for (int i = 0; i < _ATN.NumberOfDecisions; i++)
			{
				decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
			}
		}

		public ECARulesParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ECARulesParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
		{
			Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
		}
		public partial class ProgramContext : ParserRuleContext
		{
			public DeclarationContext[] declaration()
			{
				return GetRuleContexts<DeclarationContext>();
			}
			public DeclarationContext declaration(int i)
			{
				return GetRuleContext<DeclarationContext>(i);
			}
			public BehaviourDeclarationContext[] behaviourDeclaration()
			{
				return GetRuleContexts<BehaviourDeclarationContext>();
			}
			public BehaviourDeclarationContext behaviourDeclaration(int i)
			{
				return GetRuleContext<BehaviourDeclarationContext>(i);
			}
			public EcaruleContext[] ecarule()
			{
				return GetRuleContexts<EcaruleContext>();
			}
			public EcaruleContext ecarule(int i)
			{
				return GetRuleContext<EcaruleContext>(i);
			}
			public AliasContext[] alias()
			{
				return GetRuleContexts<AliasContext>();
			}
			public AliasContext alias(int i)
			{
				return GetRuleContext<AliasContext>(i);
			}
			public ProgramContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_program; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterProgram(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitProgram(this);
			}
		}

		[RuleVersion(0)]
		public ProgramContext program()
		{
			ProgramContext _localctx = new ProgramContext(Context, State);
			EnterRule(_localctx, 0, RULE_program);
			int _la;
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 55;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do
					{
						{
							{
								State = 54; declaration();
							}
						}
						State = 57;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while (_la == DEFINE);
					State = 62;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la == THE)
					{
						{
							{
								State = 59; behaviourDeclaration();
							}
						}
						State = 64;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 66;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do
					{
						{
							{
								State = 65; ecarule();
							}
						}
						State = 68;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while (_la == WHEN);
					State = 73;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la == DEFINE)
					{
						{
							{
								State = 70; alias();
							}
						}
						State = 75;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class DeclarationContext : ParserRuleContext
		{
			public ObjectDeclarationContext objectDeclaration()
			{
				return GetRuleContext<ObjectDeclarationContext>(0);
			}
			public PositionDeclarationContext positionDeclaration()
			{
				return GetRuleContext<PositionDeclarationContext>(0);
			}
			public PathDeclarationContext pathDeclaration()
			{
				return GetRuleContext<PathDeclarationContext>(0);
			}
			public ColorDeclarationContext colorDeclaration()
			{
				return GetRuleContext<ColorDeclarationContext>(0);
			}
			public DeclarationContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_declaration; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterDeclaration(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitDeclaration(this);
			}
		}

		[RuleVersion(0)]
		public DeclarationContext declaration()
		{
			DeclarationContext _localctx = new DeclarationContext(Context, State);
			EnterRule(_localctx, 2, RULE_declaration);
			try
			{
				State = 80;
				ErrorHandler.Sync(this);
				switch (Interpreter.AdaptivePredict(TokenStream, 4, Context))
				{
					case 1:
						EnterOuterAlt(_localctx, 1);
						{
							State = 76; objectDeclaration();
						}
						break;
					case 2:
						EnterOuterAlt(_localctx, 2);
						{
							State = 77; positionDeclaration();
						}
						break;
					case 3:
						EnterOuterAlt(_localctx, 3);
						{
							State = 78; pathDeclaration();
						}
						break;
					case 4:
						EnterOuterAlt(_localctx, 4);
						{
							State = 79; colorDeclaration();
						}
						break;
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class ObjectDeclarationContext : ParserRuleContext
		{
			public ITerminalNode DEFINE() { return GetToken(ECARulesParser.DEFINE, 0); }
			public TypeContext type()
			{
				return GetRuleContext<TypeContext>(0);
			}
			public ITerminalNode IDENTIFIER() { return GetToken(ECARulesParser.IDENTIFIER, 0); }
			public ITerminalNode SEMI() { return GetToken(ECARulesParser.SEMI, 0); }
			public ObjectDeclarationContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_objectDeclaration; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterObjectDeclaration(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitObjectDeclaration(this);
			}
		}

		[RuleVersion(0)]
		public ObjectDeclarationContext objectDeclaration()
		{
			ObjectDeclarationContext _localctx = new ObjectDeclarationContext(Context, State);
			EnterRule(_localctx, 4, RULE_objectDeclaration);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 82; Match(DEFINE);
					State = 83; type();
					State = 84; Match(IDENTIFIER);
					State = 85; Match(SEMI);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class PositionDeclarationContext : ParserRuleContext
		{
			public ITerminalNode DEFINE() { return GetToken(ECARulesParser.DEFINE, 0); }
			public ITerminalNode POSITION() { return GetToken(ECARulesParser.POSITION, 0); }
			public ITerminalNode IDENTIFIER() { return GetToken(ECARulesParser.IDENTIFIER, 0); }
			public ITerminalNode EQUAL() { return GetToken(ECARulesParser.EQUAL, 0); }
			public PositionLiteralContext positionLiteral()
			{
				return GetRuleContext<PositionLiteralContext>(0);
			}
			public ITerminalNode SEMI() { return GetToken(ECARulesParser.SEMI, 0); }
			public PositionDeclarationContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_positionDeclaration; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterPositionDeclaration(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitPositionDeclaration(this);
			}
		}

		[RuleVersion(0)]
		public PositionDeclarationContext positionDeclaration()
		{
			PositionDeclarationContext _localctx = new PositionDeclarationContext(Context, State);
			EnterRule(_localctx, 6, RULE_positionDeclaration);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 87; Match(DEFINE);
					State = 88; Match(POSITION);
					State = 89; Match(IDENTIFIER);
					State = 90; Match(EQUAL);
					State = 91; positionLiteral();
					State = 92; Match(SEMI);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class PositionLiteralContext : ParserRuleContext
		{
			public ITerminalNode LPAREN() { return GetToken(ECARulesParser.LPAREN, 0); }
			public FloatLiteralContext[] floatLiteral()
			{
				return GetRuleContexts<FloatLiteralContext>();
			}
			public FloatLiteralContext floatLiteral(int i)
			{
				return GetRuleContext<FloatLiteralContext>(i);
			}
			public ITerminalNode[] COMMA() { return GetTokens(ECARulesParser.COMMA); }
			public ITerminalNode COMMA(int i)
			{
				return GetToken(ECARulesParser.COMMA, i);
			}
			public ITerminalNode RPAREN() { return GetToken(ECARulesParser.RPAREN, 0); }
			public PositionLiteralContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_positionLiteral; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterPositionLiteral(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitPositionLiteral(this);
			}
		}

		[RuleVersion(0)]
		public PositionLiteralContext positionLiteral()
		{
			PositionLiteralContext _localctx = new PositionLiteralContext(Context, State);
			EnterRule(_localctx, 8, RULE_positionLiteral);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 94; Match(LPAREN);
					State = 95; floatLiteral();
					State = 96; Match(COMMA);
					State = 97; floatLiteral();
					State = 98; Match(COMMA);
					State = 99; floatLiteral();
					State = 100; Match(RPAREN);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class PathDeclarationContext : ParserRuleContext
		{
			public ITerminalNode DEFINE() { return GetToken(ECARulesParser.DEFINE, 0); }
			public ITerminalNode PATH() { return GetToken(ECARulesParser.PATH, 0); }
			public ITerminalNode IDENTIFIER() { return GetToken(ECARulesParser.IDENTIFIER, 0); }
			public ITerminalNode EQUAL() { return GetToken(ECARulesParser.EQUAL, 0); }
			public ITerminalNode LBRACE() { return GetToken(ECARulesParser.LBRACE, 0); }
			public PositionLiteralContext[] positionLiteral()
			{
				return GetRuleContexts<PositionLiteralContext>();
			}
			public PositionLiteralContext positionLiteral(int i)
			{
				return GetRuleContext<PositionLiteralContext>(i);
			}
			public ITerminalNode RBRACE() { return GetToken(ECARulesParser.RBRACE, 0); }
			public ITerminalNode SEMI() { return GetToken(ECARulesParser.SEMI, 0); }
			public ITerminalNode COMMA() { return GetToken(ECARulesParser.COMMA, 0); }
			public PathDeclarationContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_pathDeclaration; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterPathDeclaration(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitPathDeclaration(this);
			}
		}

		[RuleVersion(0)]
		public PathDeclarationContext pathDeclaration()
		{
			PathDeclarationContext _localctx = new PathDeclarationContext(Context, State);
			EnterRule(_localctx, 10, RULE_pathDeclaration);
			int _la;
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 102; Match(DEFINE);
					State = 103; Match(PATH);
					State = 104; Match(IDENTIFIER);
					State = 105; Match(EQUAL);
					State = 106; Match(LBRACE);
					State = 107; positionLiteral();
					State = 110;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la == COMMA)
					{
						{
							State = 108; Match(COMMA);
							State = 109; positionLiteral();
						}
					}

					State = 112; Match(RBRACE);
					State = 113; Match(SEMI);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class ColorDeclarationContext : ParserRuleContext
		{
			public ITerminalNode DEFINE() { return GetToken(ECARulesParser.DEFINE, 0); }
			public ITerminalNode COLOR() { return GetToken(ECARulesParser.COLOR, 0); }
			public ITerminalNode IDENTIFIER() { return GetToken(ECARulesParser.IDENTIFIER, 0); }
			public ITerminalNode EQUAL() { return GetToken(ECARulesParser.EQUAL, 0); }
			public ITerminalNode COLOR_LITERAL() { return GetToken(ECARulesParser.COLOR_LITERAL, 0); }
			public ITerminalNode SEMI() { return GetToken(ECARulesParser.SEMI, 0); }
			public ColorDeclarationContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_colorDeclaration; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterColorDeclaration(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitColorDeclaration(this);
			}
		}

		[RuleVersion(0)]
		public ColorDeclarationContext colorDeclaration()
		{
			ColorDeclarationContext _localctx = new ColorDeclarationContext(Context, State);
			EnterRule(_localctx, 12, RULE_colorDeclaration);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 115; Match(DEFINE);
					State = 116; Match(COLOR);
					State = 117; Match(IDENTIFIER);
					State = 118; Match(EQUAL);
					State = 119; Match(COLOR_LITERAL);
					State = 120; Match(SEMI);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class FloatLiteralContext : ParserRuleContext
		{
			public ITerminalNode FLOAT_LITERAL() { return GetToken(ECARulesParser.FLOAT_LITERAL, 0); }
			public ITerminalNode DECIMAL_LITERAL() { return GetToken(ECARulesParser.DECIMAL_LITERAL, 0); }
			public FloatLiteralContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_floatLiteral; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterFloatLiteral(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitFloatLiteral(this);
			}
		}

		[RuleVersion(0)]
		public FloatLiteralContext floatLiteral()
		{
			FloatLiteralContext _localctx = new FloatLiteralContext(Context, State);
			EnterRule(_localctx, 14, RULE_floatLiteral);
			int _la;
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 122;
					_la = TokenStream.LA(1);
					if (!(_la == DECIMAL_LITERAL || _la == FLOAT_LITERAL))
					{
						ErrorHandler.RecoverInline(this);
					}
					else
					{
						ErrorHandler.ReportMatch(this);
						Consume();
					}
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class TypeContext : ParserRuleContext
		{
			public ITerminalNode IDENTIFIER() { return GetToken(ECARulesParser.IDENTIFIER, 0); }
			public TypeContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_type; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterType(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitType(this);
			}
		}

		[RuleVersion(0)]
		public TypeContext type()
		{
			TypeContext _localctx = new TypeContext(Context, State);
			EnterRule(_localctx, 16, RULE_type);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 124; Match(IDENTIFIER);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class PositionContext : ParserRuleContext
		{
			public ITerminalNode THE() { return GetToken(ECARulesParser.THE, 0); }
			public ITerminalNode POSITION() { return GetToken(ECARulesParser.POSITION, 0); }
			public ITerminalNode IDENTIFIER() { return GetToken(ECARulesParser.IDENTIFIER, 0); }
			public PositionContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_position; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterPosition(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitPosition(this);
			}
		}

		[RuleVersion(0)]
		public PositionContext position()
		{
			PositionContext _localctx = new PositionContext(Context, State);
			EnterRule(_localctx, 18, RULE_position);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 126; Match(THE);
					State = 127; Match(POSITION);
					State = 128; Match(IDENTIFIER);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class PathContext : ParserRuleContext
		{
			public ITerminalNode THE() { return GetToken(ECARulesParser.THE, 0); }
			public ITerminalNode PATH() { return GetToken(ECARulesParser.PATH, 0); }
			public ITerminalNode IDENTIFIER() { return GetToken(ECARulesParser.IDENTIFIER, 0); }
			public PathContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_path; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterPath(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitPath(this);
			}
		}

		[RuleVersion(0)]
		public PathContext path()
		{
			PathContext _localctx = new PathContext(Context, State);
			EnterRule(_localctx, 20, RULE_path);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 130; Match(THE);
					State = 131; Match(PATH);
					State = 132; Match(IDENTIFIER);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class AngleContext : ParserRuleContext
		{
			public FloatLiteralContext floatLiteral()
			{
				return GetRuleContext<FloatLiteralContext>(0);
			}
			public ITerminalNode DEGREES() { return GetToken(ECARulesParser.DEGREES, 0); }
			public ITerminalNode AROUND() { return GetToken(ECARulesParser.AROUND, 0); }
			public ITerminalNode AXIS() { return GetToken(ECARulesParser.AXIS, 0); }
			public ITerminalNode X() { return GetToken(ECARulesParser.X, 0); }
			public ITerminalNode Y() { return GetToken(ECARulesParser.Y, 0); }
			public ITerminalNode Z() { return GetToken(ECARulesParser.Z, 0); }
			public AngleContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_angle; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterAngle(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitAngle(this);
			}
		}

		[RuleVersion(0)]
		public AngleContext angle()
		{
			AngleContext _localctx = new AngleContext(Context, State);
			EnterRule(_localctx, 22, RULE_angle);
			int _la;
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 134; floatLiteral();
					State = 135; Match(DEGREES);
					State = 139;
					ErrorHandler.Sync(this);
					switch (Interpreter.AdaptivePredict(TokenStream, 6, Context))
					{
						case 1:
							{
								State = 136; Match(AROUND);
								State = 137;
								_la = TokenStream.LA(1);
								if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << X) | (1L << Y) | (1L << Z))) != 0)))
								{
									ErrorHandler.RecoverInline(this);
								}
								else
								{
									ErrorHandler.ReportMatch(this);
									Consume();
								}
								State = 138; Match(AXIS);
							}
							break;
					}
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				ErrorHandler.ReportError(this, re);
				ErrorHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class ColorContext : ParserRuleContext
		{
			public ITerminalNode THE() { return GetToken(ECARulesParser.THE, 0); }
			public ITerminalNode COLOR() { return GetToken(ECARulesParser.COLOR, 0); }
			public ITerminalNode IDENTIFIER() { return GetToken(ECARulesParser.IDENTIFIER, 0); }
			public ColorContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_color; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.EnterColor(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				IECARulesParserListener typedListener = listener as IECARulesParserListener;
				if (typedListener != null) typedListener.ExitColor(this);
			}
		}
